<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/share_icon"
        android:title="@string/share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/archive"
        android:icon="@drawable/archive_icon"
        android:title="@string/archive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/unarchive"
        android:icon="@drawable/unarchive_icon"
        android:title="@string/unarchive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/trash"
        app:showAsAction="always"/>

</menu>