<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:expandedTitleMarginStart="48dp"
        app:expandedTitleMarginEnd="64dp"
        app:titleCollapseMode="fade">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp" >

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            app:layout_scrollFlags="scroll|enterAlways"
            />

        <LinearLayout
            android:id="@+id/edit_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingStart="16dp"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/all_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/teal_200"
                android:paddingStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:paddingStart="16dp"
                android:textSize="16dp" />

        </LinearLayout>

    </com.google.android.material.appbar.CollapsingToolbarLayout>


    <TextView
        android:id="@+id/trash_fragment_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trash_fragment_alert"
        android:padding="16dp"
        android:visibility="gone"
        tools:visibility="visible" />

</com.google.android.material.appbar.AppBarLayout>