<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/unarchive_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawableLeft="@drawable/archive_icon"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/archive_icon"
            android:gravity="center_vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/unarchive"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/archive_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawableLeft="@drawable/archive_icon"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/archive_icon"
            android:gravity="center_vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/archive"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_view_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/share_icon"
            android:gravity="center_vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/share"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <TextView
            android:id="@+id/text_view_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawableLeft="@drawable/ic_delete"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_delete"
            android:gravity="center_vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:text="Delete item"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
    </LinearLayout>
</LinearLayout>